Bug 1367338 - Do not hide collapse button; r=jdescottes
MozReview-Commit-ID: FOzfDkrJDcZ

UltraBlame original commit: f93ee3d17d7ede7b5d3ac625f8dcba2084b68137

--- a/devtools/client/netmonitor/src/assets/styles/netmonitor.css
+++ b/devtools/client/netmonitor/src/assets/styles/netmonitor.css
@@ -4266,23 +4266,6 @@ details
 panel
 -
 toggle
-[
-disabled
-]
-{
-display
-:
-none
-;
-}
-.
-network
--
-details
--
-panel
--
-toggle
 :
 dir
 (
